NXP-27375: Cleanup / Format